@@ -7692,6 +7692,11 @@ saveLogDir="/usr/local/dev/projects/cc/logs"</td>
                     <a href="#onfailure">&lt;onfailure&gt;</a> instead.</b><br/>
                     set this attribute to false to stop the publisher from running when the build fails.</td>
             </tr>
+            <tr>
+                <td>moveInsteadOfCopy</td>
+                <td>No (defaults to false)</td>
+                <td>The publisher will move files/directrories instead of copying them.</td>
+            </tr>
             </tbody>
         </table>
         </div>
